# hft_projects

./: .gitignore  README.md
epoll_market_broadcaster/: CMakeLists.txt  README.md  compile_commands.json
epoll_market_broadcaster/include/: connect.h  lockfree_queue.h  server.h
epoll_market_broadcaster/src/: connection.cpp  main.cpp  server.cpp
lats/: Agents.md  CMakeLists.txt  Makefile  README.md  conanfile.txt
lats/bench/: CMakeLists.txt  bench_spsc_queue.cpp
lats/examples/: CMakeLists.txt  boost_intrusive_demo.cpp
lats/include/core/: latency_stats.hpp  spsc_queue.hpp  timer.hpp
lats/include/lob/: order.hpp  types.hpp
lats/src/core/: CMakeLists.txt  latency_stats.cpp  timer.cpp
lats/src/feed/: CMakeLists.txt
lats/src/lob/: CMakeLists.txt  order.cpp
lats/tests/: CMakeLists.txt
lats/tests/core/: test_spsc_queue.cpp
